--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <hsqldb.version>2.3.2</hsqldb.version>
         <testng.version>6.8.13</testng.version>
         <mockito.version>1.10.19</mockito.version>
+        <hamcrest.version>1.3</hamcrest.version>
     </properties>
 
     <dependencies>
@@ -43,13 +44,11 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
+            <version>${hamcrest.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
